--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sentinelx-professional",
-  "version": "6.0.0",
+  "name": "prime-ai-professional",
+  "version": "6.5.0",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
