--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ git_status_full.tmp
 SentinelX_Comprehensive_Enterprise_Manual.pdf
 SentinelX_Professional_Details.pdf
 *.log
+__pycache__/
+*.pyc
+troubleshoot_report.txt
