--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,10 @@
   "type": "commonjs",
   "dependencies": {
     "bcryptjs": "^3.0.3",
+    "cors": "^2.8.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^8.2.1",
     "express-session": "^1.17.3",
     "multer": "^2.0.2",
     "natural": "^8.1.0",
