Implement Real-Time Email OTP registration with Nodemailer and set all h2 headers to Transformers (Orbitron) font.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -20,3 +20,11 @@ LINKEDIN_CLIENT_SECRET=your_linkedin_client_secret
 
 # Port (Optional)
 PORT=3000
+
+# --- Real-Time Email OTP (Nodemailer) ---
+# Use an App Password for Gmail (don't use your main password).
+# EMAIL_HOST: 'smtp.gmail.com' for Gmail, 'smtp-mail.outlook.com' for Outlook.
+EMAIL_HOST=
+EMAIL_PORT=587
+EMAIL_USER=
+EMAIL_PASS=
