--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.17.3",
     "multer": "^2.0.2",
     "natural": "^8.1.0",
+    "nodemailer": "^8.0.1",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
